# sunseticon

./: .gitignore  Dockerfile  Makefile  README.md
back/: .env  Cargo.toml  Rocket.toml
back/sonic/: config.cfg
back/src/: database.rs  icon.rs  image.rs  main.rs
vue/: package.json
vue/src/: App.vue
vue/src/components/: HelloWorld.vue  IconList.vue
vue/src/components/core/: Headers.vue
vue/src/components/home/: Icon.vue  IconList.vue
vue/src/plugins/: vuetify.js
vue/src/views/: Home.vue
