[package]
name = "sunseticon"
version = "0.1.0"

[dependencies]
rocket = "0.4.0"
rocket_contrib = "0.4.0"
rocket_codegen = "0.4.0"
serde = "1.0.37"
serde_derive = "1.0.37"
serde_json = "1.0.13"
rocket_cors = "0.4.0"
r2d2 = "0.8"
postgres = { version = "0.15.2", features = ["with-uuid", "with-chrono"] }
r2d2_postgres="0.14"
sonic_client = "0.1.1"
multipart="0.16.1"
dotenv = "0.9.0"
